--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ custom_events.swf
 history.log
 compile/debug_parse_test.ps1
 compile/files/ExternalEvents.as
+compile/debug.log
+compile/debug_gui.log
+compile/run_old.ps1
+compile/RUN_OLD_DOCUMENTATION.md
+compile/theme.txt
+compile/history.log
+compile/files/ExternalEvents.as
