Re-integrated online folder

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ compile/RUN_OLD_DOCUMENTATION.md
 compile/theme.txt
 compile/history.log
 compile/files/ExternalEvents.as
+compile/files/ExternalEvents.as
+compile/history.log
