--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main  # Change if your default branch is different
     paths:
-      - 'compile/online/**'  # Only triggers when files in this folder or subfolders change
+      - 'compile/online/**'
 
 jobs:
   notify:
@@ -15,21 +15,24 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         run: |
+          # Safely escape the commit message (handles newlines, quotes, etc.)
+          MESSAGE_JSON=$(printf '%s' "${{ github.event.head_commit.message }}" | jq -Rs .)
+
           jq -n \
             --arg title "New changes in compile/online folder! 🚀" \
             --arg repo "${{ github.repository }}" \
             --arg branch "${{ github.ref_name }}" \
-            --arg pusher "${{ github.event.pusher.name }}" \
-            --arg message "${{ github.event.head_commit.message }}" \
+            --arg pusher "${{ github.event.pusher.name || github.actor }}" \
+            --argjson message "$MESSAGE_JSON" \
             --arg author "${{ github.event.head_commit.author.name }}" \
-            --arg compare_url "https://github.com/${{ github.repository }}/compare/${{ github.event.before }}...${{ github.sha }}" \
+            --arg compare_url "${{ github.event.compare }}" \
             --arg commit_url "https://github.com/${{ github.repository }}/commit/${{ github.sha }}" \
+            --arg timestamp "${{ github.event.head_commit.timestamp }}" \
             '{
               embeds: [{
                 title: $title,
-                description: "**Repository:** \($repo)\n**Branch:** \($branch)\n**Pushed by:** \($pusher)\n\n**Latest commit message:**\n\($message)\n\n**Author:** \($author)\n\n[View all changes in this push](\($compare_url))\n[Latest commit details](\($commit_url))",
-                color: 3447003,
-                timestamp: now
+                description: "**Repository:** \($repo)\n**Branch:** \($branch)\n**Pushed by:** \($pusher)\n\n**Latest commit message:**\n$message\n\n**Author:** \($author)\n\n[View all changes in this push](\($compare_url))\n[Latest commit details](\($commit_url))",
+                color: 3447003,  # Blue
+                timestamp: $timestamp
               }]
-            }' \
-          | curl -H "Content-Type: application/json" -d @- $DISCORD_WEBHOOK
+            }' | curl -H "Content-Type: application/json" -d @- "$DISCORD_WEBHOOK"
